scrollbar issue css fix
git-svn-id: http://svn.ccnmtl.columbia.edu/envirocon/trunk@17616 1f418930-7ff8-0310-b8ad-c653122473bc

--- a/media/css/game.css
+++ b/media/css/game.css
@@ -394,7 +394,8 @@ table.interventions td textarea{
 
 #form-block {
   max-height: 500px;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
                    
 #game-content {
